tests/ui/struct.stderr
error: c should sort before d
 --> tests/ui/struct.rs:6:5
  |
3 | #[sorted]
  | --------- in this procedural macro expansion
...
6 |     c: usize,
  |     ^
  |
  = note: this error originates in the attribute macro `sorted` (in Nightly builds, run with -Z macro-backtrace for more info)
